--- a/chamber/styles/chamber-small.css
+++ b/chamber/styles/chamber-small.css
@@ -416,6 +416,17 @@
 
     }
 
+    .featured-businesses {
+        display: flex;
+        flex-direction: column;
+        max-width: 100vw;
+
+        width: 100%;
+        margin: 0 auto;
+
+
+    }
+
     /* .featured-businesses {
         display: flex;
         flex-direction: column;
@@ -742,25 +753,7 @@
     }
 
 
-    .featured-members {
-        display: flex;
-        flex-direction: column;
-        max-width: 100vw;
-        width: 100%;
 
-
-    }
-
-    .featured-businesses {
-        display: flex;
-        flex-direction: column;
-        max-width: 100vw;
-
-        width: 100%;
-        margin: 0 auto;
-
-
-    }
 }
 
 /* Mobile view 3 */
